# qt-collapsible-sidebar

./: .gitignore  CMakeLists.txt  README.md  collapsible_sidebar.cpp  collapsible_sidebar.hpp  mainwindow.cpp  mainwindow.h
